# crudcrate

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  LICENSE  README.md  REFACTORING_SUMMARY.md  SECURITY_AUDIT.md  index.html  test_cyclic_dependency.rs  test_deep_recursion_post.rs  versions.json
0.7.0/: 404.html  changelog.html  contributing.html  faq.html  index.html  print.html  searcher-c2a407aa.js  searchindex-334fbb7b.js  toc-fb4b1996.js
0.7.1/: 404.html  changelog.html  faq.html  index.html  print.html  searcher-c2a407aa.js  searchindex-ffca4e36.js  toc-05241513.js  toc.html
0.7.2/: 404.html  changelog.html  faq.html  index.html  print.html  searcher-c2a407aa.js  searchindex-41cb6191.js
0.8.0/: 404.html  changelog.html  faq.html  index.html  print.html  searcher-c2a407aa.js  searchindex-4b51f762.js  toc.html
benches/: crud_benchmarks.rs
crudcrate/: Cargo.toml
crudcrate-derive/: Cargo.toml  README.md
crudcrate-derive/src/: attribute_parser.rs  attributes.rs  code_generator.rs  debug_output.rs  field_analysis.rs  field_analyzer.rs  helpers.rs  join_generators.rs  lib.rs  macro_implementation.rs  relation_validator.rs  structs.rs  two_pass_generator.rs
crudcrate-derive/src/codegen/: join_loading.rs  mod.rs  model_generators.rs  type_resolution.rs
crudcrate-derive/src/codegen/handler/: create.rs  delete.rs  get.rs  update.rs
crudcrate-derive/src/codegen/handlers/: aggregate.rs  create.rs  delete.rs  get.rs  mod.rs  update.rs
crudcrate-derive/src/codegen/join_strategies/: mod.rs  recursion.rs  structs.rs
crudcrate-derive/src/codegen/joins/: config.rs  loading.rs  mod.rs
crudcrate-derive/src/codegen/model/: create.rs  list.rs  mod.rs  response.rs  update.rs
crudcrate-derive/src/codegen/models/: api_struct.rs  create.rs  list.rs  list_response.rs  merge.rs  mod.rs  response.rs  shared.rs  update.rs
crudcrate-derive/src/codegen/router/: axum.rs
crudcrate-derive/src/fields/: analysis.rs  extraction.rs  mod.rs  type_utils.rs
crudcrate-derive/src/traits/: mod.rs
crudcrate-derive/src/traits/crudresource/: structs.rs
crudcrate-derive/tests/: macro_tests.rs
crudcrate-derive/tests/expand/: simple_entity.expanded.rs  simple_entity.rs
crudcrate-derive/tests/ui-fail/: deprecated_fn_create.rs  deprecated_fn_create.stderr  deprecated_fn_delete.rs  deprecated_fn_delete.stderr  integer_pk.rs  integer_pk.stderr
crudcrate-derive/tests/ui-pass/: basic_entity.rs  entity_with_hooks.rs  field_exclusion.rs  join_filter_sort.rs
crudcrate/benches/: crud_benchmarks.rs
crudcrate/examples/: minimal_axum.rs  minimal_spring.rs
crudcrate/src/: errors.rs  filter.rs  join_fields.rs  lib.rs  models.rs  operations.rs  scope.rs  sort.rs  validation.rs
crudcrate/src/aggregation/: mod.rs
crudcrate/src/core/: crud_operations.rs  mod.rs  traits.rs
crudcrate/src/database/: index_analysis.rs  mod.rs
crudcrate/src/dev_experience/: mod.rs
crudcrate/src/filtering/: conditions.rs  joined.rs  mod.rs  pagination.rs  query_parser.rs  search.rs  sort.rs
crudcrate/src/relationships/: mod.rs
docs/: .gitignore  Dockerfile  README.md  book.toml
docs/test-links/: Cargo.toml
docs/test-links/src/: main.rs
examples/: README.md  auth_wrapper.rs  crud_operations.rs  error_handling.rs  input_validation.rs  jwt_authentication.rs  list_optimization.rs  minimal.rs  minimal_axum.rs  minimal_debug.rs  minimal_spring.rs  nested_relationships.rs  rate_limiting.rs  recursive_join.rs  recursive_join_test.rs  recursive_join_test.rs.bak  row_level_security.rs  s3_cleanup_on_delete.rs  simple_join.rs  test_router_only.rs  validation_with_trait.rs
latest/: 404.html  changelog.html  contributing.html  faq.html  index.html  print.html  searcher-c2a407aa.js  searchindex-5bea4c1b.js  searchindex-d0e21c4b.js  toc-8bb2dc99.js  toc-ccff9747.js  toc.html
shared_models/: Cargo.toml
shared_models/src/: category.rs  category_with_depth.rs  customer.rs  lib.rs  maintenance_record.rs  vehicle.rs  vehicle_part.rs
src/: filter.rs  index_analysis.rs  lib.rs  models.rs  openapi.rs  routes.rs  sort.rs  traits.rs
test_suite/: Cargo.toml  run_join_tests.sh
test_suite/tests/: aggregate_e2e_test.rs  aggregate_features_test.rs  aggregate_only_test.rs  aggregation_test.rs  basic_crud_test.rs  batch_loading_benchmark_test.rs  batch_loading_joins_test.rs  compile_time_validation_demo.rs  comprehensive_filtering_test.rs  comprehensive_fulltext_test.rs  comprehensive_pagination_test.rs  comprehensive_sorting_test.rs  configurable_limits_test.rs  crud_operations_test.rs  custom_crud_functions_test.rs  database_analysis_test.rs  database_optimization_test.rs  debug_setup.rs  depth_aware_recursive_joins_test.rs  depth_recursive_joins_test.rs  derive_macro_integration_test.rs  dev_experience_test.rs  entity_to_models_macro_test.rs  enum_case_sensitivity_integration_test.rs  enum_filtering_test.rs  exclude_functionality_test.rs  external_security_integration_test.rs  field_exclusion_join_test.rs  filtering_search_test.rs  filtering_sorting_pagination_test.rs  filtering_test.rs  fulltext_api_integration_test.rs  fulltext_search_test.rs  generic_joins_test.rs  hook_system_test.rs  index_analysis_test.rs  integer_pk_test.rs  join_filter_sort_test.rs  join_functionality_test.rs  join_validation_test.rs  (+22 more)
test_suite/tests/common/: mod.rs
test_suite/tests/common/customer_entity/: mod.rs
test_suite/tests/common/maintenance_record_entity/: mod.rs
test_suite/tests/common/models/: category.rs  customer.rs  maintenance_record.rs  mod.rs  reading.rs  sensor_reading.rs  sensor_reading_extended.rs  vehicle.rs  vehicle_part.rs
test_suite/tests/common/task_entity/: mod.rs
test_suite/tests/common/todo_entity/: mod.rs
test_suite/tests/common/vehicle_entity/: mod.rs
test_suite/tests/common/vehicle_part_entity/: mod.rs
test_suite/tests/models/: maintenance_record.rs
tests/: atomic_data_type_tests.rs  atomic_numeric_comparison_tests.rs  comprehensive_api_coverage_test.rs  create_model_exclusion_test.rs  crud_integration_test.rs  data_type_filtering_tests.rs  derive_macro_integration_test.rs  (+17 more)
(+214 files in other folders)
