[package]
name = "crudcrate"
version = "0.4.0"
edition = "2024"
description = "Rust traits and functions to aid in building CRUD APIs in Axum and Sea-ORM"
license = "MIT"
readme = "README.md"
repository = "https://github.com/evanjt/crudcrate"
keywords = ["crud", "api", "axum", "sea-orm"]
categories = ["web-programming", "database"]

[dependencies]
async-trait = "0.1.88"
sea-orm = "1.1.13"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
serde = { version = "1.0.219", features = ["derive"] }
utoipa = "5.4.0"
axum = { version = "0.8.4", features = ["macros"] }
hyper = "1.6.0"
serde_json = "1.0.140"
serde_with = "3.14.0"
crudcrate-derive = "0.2.1"

[lib]
proc-macro = false

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
utoipa-axum = "0.2.0"
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
sea-orm-migration = "1.1.13"
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
url = "2.4.1"
url-escape = "0.1.1"

# External security libraries for integration testing and examples
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tower_governor = "0.7.0"
axum-helmet = "0.1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crud_benchmarks"
harness = false

[lints.clippy]
pedantic = "warn"
