[workspace]
members = ["crudcrate", "crudcrate-derive", "test_suite", "shared_models"]
resolver = "2"

[workspace.dependencies]
# Procedural macro dependencies
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "derive", "parsing", "printing", "clone-impls", "proc-macro"] }
convert_case = "0.8.0"

# Core dependencies
async-trait = "0.1.88"
axum = "0.8.4"
hyper = { version = "1.6.0", features = ["full"] }
sea-orm = { version = "1.1.14", default-features = false }
serde = "1.0.219"
serde_json = "1.0.142"
serde_with = "3.14.0"
utoipa = "5.4.0"
uuid = "1.17.0"
chrono = "0.4.41"
rust_decimal = "1.37.2"

# Development dependencies
tokio = "1.47.1"
sea-orm-migration = "1.1.14"
tower = "0.5.2"
tower-http = "0.6.6"
tower_governor = "0.8.0"
url = "2.5.7"
url-escape = "0.1.1"
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
axum-helmet = "0.2.0"
criterion = "0.7.0"


# Patch crates.io crudcrate with the local version for development
[patch.crates-io]
crudcrate = { path = "crudcrate" }

[profile.dev]
# Faster compilation in development
debug = 1

[profile.test]
# Better performance for tests
opt-level = 1
