[package]
name = "crudcrate-derive"
version = "0.5.0"
edition = "2024"
description = "Procedural macros to help with CRUD API design using Axum and Sea-ORM in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/evanjt/crudcrate"
keywords = ["crud", "api", "axum", "sea-orm"]
categories = ["web-programming", "database"]

[dependencies]
# Proc macro dependencies using workspace versions
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }

[lib]
proc-macro = true


[dev-dependencies]
sea-orm = { workspace = true, features = ["macros", "with-chrono", "with-uuid", "with-json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
utoipa = { workspace = true, features = ["chrono", "uuid", "decimal"] }
uuid = { workspace = true, features = ["serde", "v4"] }
rust_decimal = { workspace = true }
async-trait = { workspace = true }

[lints.clippy]
pedantic = "warn"