[package]
name = "crudcrate-derive"
version = "0.7.2"
edition = "2024"
description = "Derive macros for crudcrate — generate CRUD endpoints from Sea-ORM entities"
license = "MIT"
readme = "README.md"
repository = "https://github.com/evanjt/crudcrate"
documentation = "https://docs.rs/crudcrate"
keywords = ["crud", "api", "axum", "sea-orm", "derive"]
categories = ["web-programming", "database"]

[dependencies]
# Proc macro dependencies using workspace versions
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }
heck = { workspace = true }
prettyplease = { version = "0.2", optional = true }

[lib]
proc-macro = true

[dev-dependencies]
sea-orm = { workspace = true, features = ["macros", "with-chrono", "with-uuid", "with-json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
utoipa = { workspace = true, features = ["chrono", "uuid", "decimal"] }
uuid = { workspace = true, features = ["serde", "v4"] }
rust_decimal = { workspace = true }
async-trait = { workspace = true }

# Proc macro testing
trybuild = "1.0"
macrotest = "1.0"
crudcrate = { path = "../crudcrate", features = ["derive"] }

[lints.clippy]
pedantic = "warn"
