[package]
name = "crudcrate"
version = "0.4.5"
edition = "2024"
description = "Rust traits and functions to aid in building CRUD APIs with Axum and Sea-ORM"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/evanjt/crudcrate"
keywords = ["crud", "api", "axum", "sea-orm"]
categories = ["web-programming", "database"]

[features]
default = ["sqlite", "derive"]
derive = ["crudcrate-derive"]
mysql = ["sea-orm/sqlx-mysql"]
postgresql = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]

[dependencies]
# Proc macro dependency (optional)
crudcrate-derive = { version = "=0.4.5", optional = true, path = "../crudcrate-derive" }

# Core dependencies using workspace versions
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
hyper = { workspace = true }
sea-orm = { workspace = true, features = ["runtime-tokio-rustls", "macros", "with-uuid"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

# Special dependency to ensure crudcrate-derive stays in sync even when derive feature is disabled
[target.'cfg(any())'.dependencies]
crudcrate-derive = { version = "=0.4.5", path = "../crudcrate-derive" }

[lib]
proc-macro = false

[dev-dependencies]
axum-helmet = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
criterion = { workspace = true, features = ["html_reports"] }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
tower_governor = { workspace = true }
url = { workspace = true }
url-escape = { workspace = true }
utoipa = { workspace = true, features = ["uuid", "chrono"] }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }

[[example]]
name = "minimal_axum"
path = "../examples/minimal_axum.rs"
required-features = ["derive"]

[[example]]
name = "minimal_spring"
path = "../examples/minimal_spring.rs"
required-features = ["derive"]

[lints.clippy]
pedantic = "warn"