[package]
name = "shared_models"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies using workspace versions
crudcrate = { path = "../crudcrate", features = ["derive", "sqlite"] }
sea-orm = { workspace = true, features = ["runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-rust_decimal"] }
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["uuid", "chrono", "decimal"] }
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
axum = { workspace = true, features = ["macros"] }
hyper = { workspace = true }
utoipa-axum = { workspace = true }

[dev-dependencies]
sea-orm-migration = { workspace = true }
tokio = { workspace = true, features = ["full"] }